# eqsat

./: .gitignore  .hlint.yaml  AdaptiveSort.hs  EqSat.hs  GraphMatching.hs  MHashMap.hs  MHashSet.hs  Matrix.hs  MutableBitmap.hs  README.md  SortBenchmark.hs  default.nix  eqsat.cabal
EqSat/: Equation.hs  GraphMatching.hs  IsExpression.hs  Matrix.hs  MutableBitmap.hs  Term.hs  Variable.hs
nix/: nixpkgs.nix  overrides.nix
nix/patches/: impure-containers.patch  judy.patch  sbv.patch
tests/: Main.hs  Tests.hs
tests/EqSat/: Tests.hs
tests/EqSat/Internal/MBitmap/: Gen.hs
tests/EqSat/Internal/MGraph/: Gen.hs
tests/EqSat/Tests/: Integration.hs  Property.hs  Unit.hs
tests/Tests/: Integration.hs  Unit.hs
thesis/: .gitignore  Makefile
thesis/src/: Thesis.tex  sources.bib
