--------------------------------------------------------------------------------

name:                     eqsat
version:                  0.1.0
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 Compiler
copyright:                Copyright 2018 Remy Goldschmidt
author:                   Remy Goldschmidt
maintainer:               taktoa@gmail.com
license:                  Apache-2.0
license-file:             LICENSE.md
homepage:                 https://github.com/taktoa/eqsat
bug-reports:              https://github.com/taktoa/eqsat/issues
synopsis:                 A generic Haskell implementation of the
                          equality saturation algorithm for superoptimization.
description:              A generic Haskell implementation of the
                          equality saturation algorithm for superoptimization.
extra-source-files:       README.md
tested-with:              GHC == 8.0.2

--------------------------------------------------------------------------------

source-repository head
    type:                 git
    tag:                  master
    location:             https://github.com/taktoa/eqsat.git

source-repository this
    type:                 git
    tag:                  release-0.1.0
    location:             https://github.com/taktoa/eqsat.git

--------------------------------------------------------------------------------

library
    hs-source-dirs:       library
    build-depends:        base                        >= 4.8   && < 5.0
                        , aeson                       >= 1.0   && < 1.3
                        , binary                      >= 0.8   && < 0.9
                        , bytestring                  >= 0.10  && < 0.11
                        , cborg                       >= 0.2   && < 0.3
                        , cborg-json                  >= 0.2   && < 0.3
                        , cereal                      >= 0.5   && < 0.6
                        , containers                  >= 0.5   && < 0.6
                        , contravariant               >= 1.4   && < 1.5
                        , data-partition              >= 0.3   && < 0.4
                        , deepseq                     >= 1.4   && < 1.5
                        , eigen                       >= 2.1   && < 2.2
                        , exceptions                  >= 0.8   && < 0.9
                        , flow                        >= 1.0   && < 1.1
                        , foundation                  >= 0.0   && < 0.1
                        , ghc-prim                    >= 0.5   && < 0.6
                        , hashable                    >= 1.2   && < 1.3
                        , hedgehog                    >= 0.5   && < 0.6
                        , impure-containers           >= 0.4   && < 0.5
                        , judy                        >= 0.4   && < 0.5
                        , lens                        >= 4.15  && < 4.16
                        , loc                         >= 0.1   && < 0.2
                        , mtl                         >= 2.2   && < 2.3
                        , nondeterminism              >= 1.4   && < 1.5
                        , prettyprinter               >= 1.1   && < 1.2
                        , prettyprinter-ansi-terminal >= 1.1   && < 1.2
                        , primitive                   >= 0.6   && < 0.7
                        , QuickCheck                  >= 2.9   && < 2.10
                        , quickcheck-instances        >= 0.3   && < 0.4
                        , sbv                         >= 7.5   && < 7.7
                        , serialise                   >= 0.2   && < 0.3
                        , smallcheck                  >= 1.1   && < 1.2
                        , system-filepath             >= 0.4   && < 0.5
                        , tasty                       >= 0.11  && < 0.12
                        , tasty-hedgehog              >= 0.1   && < 0.2
                        , tasty-html                  >= 0.4   && < 0.5
                        , tasty-hunit                 >= 0.9   && < 0.10
                        , tasty-lens                  >= 0.3   && < 0.4
                        , tasty-quickcheck            >= 0.8   && < 0.9
                        , tasty-smallcheck            >= 0.8   && < 0.9
                        , template-haskell            >= 2.9   && < 2.12
                        , text                        >= 1.2   && < 1.3
                        , text-short                  >= 0.1   && < 0.2
                        , transformers                >= 0.4   && < 0.6
                        , unexceptionalio             >= 0.3   && < 0.4
                        , unordered-containers        >= 0.2   && < 0.3
                        , vector                      >= 0.12  && < 0.13
                        , vector-algorithms           >= 0.7   && < 0.8
    if impl(ghc >= 8.2)
        build-depends:    compact                     >= 0.1   && < 0.2
    exposed-modules:      EqSat
                        , EqSat.Term
                        , EqSat.TypedTerm
                        , EqSat.Equation
                        , EqSat.Variable
                        , EqSat.Domain
                        , EqSat.TypeSystem
                        , EqSat.IsExpression
                        , EqSat.TermIndex
                        , EqSat.TermIndex.Class
                        , EqSat.TermIndex.DiscriminationNet
                        , EqSat.TermIndex.SubstitutionTree
                        , EqSat.Errors.CheckEquationError
                        , EqSat.Internal.Compact
                        , EqSat.Internal.MStack
                        , EqSat.Internal.MHashSet
                        , EqSat.Internal.MHashMap
                        , EqSat.Internal.MBitmap
                        , EqSat.Internal.MGraph
                        , EqSat.Internal.BipartiteMatching
                        , EqSat.Internal.Matrix
                        , EqSat.Internal.PrettyPrinter
                        , EqSat.Internal.Refined
                        , EqSat.Internal.SBV
    default-language:     Haskell2010
    -- FIXME: add other-extensions list
    -- if impl(ghc >= 8.0)
    --     ghc-options:      -Wcompat -Weverything
    --                       -fno-warn-unsafe
    --                       -fno-warn-safe
    --                       -fno-warn-implicit-prelude
    --                       -fno-warn-unused-do-bind
    --                       -fno-warn-missed-specialisations
    --                       -fno-warn-all-missed-specialisations
    --                       -g
    -- else
    --     ghc-options:      -Wall -g

--------------------------------------------------------------------------------

test-suite tests
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       tests
    main-is:              Main.hs
    other-modules:        EqSat.Tests
                        , EqSat.Tests.Unit
                        , EqSat.Tests.Property
                        , EqSat.Tests.Integration
                        , EqSat.Tests.Gen.Misc
                        , EqSat.Internal.MBitmap.Gen
                        , EqSat.Internal.MGraph.Gen
    build-depends:        eqsat
                        , base                        >= 4.8   && < 5.0
                        , aeson                       >= 1.0   && < 1.3
                        , binary                      >= 0.8   && < 0.9
                        , bytestring                  >= 0.10  && < 0.11
                        , cborg                       >= 0.2   && < 0.3
                        , cborg-json                  >= 0.2   && < 0.3
                        , cereal                      >= 0.5   && < 0.6
                        , containers                  >= 0.5   && < 0.6
                        , contravariant               >= 1.4   && < 1.5
                        , data-partition              >= 0.3   && < 0.4
                        , deepseq                     >= 1.4   && < 1.5
                        , eigen                       >= 2.1   && < 2.2
                        , exceptions                  >= 0.8   && < 0.9
                        , flow                        >= 1.0   && < 1.1
                        , foundation                  >= 0.0   && < 0.1
                        , ghc-prim                    >= 0.5   && < 0.6
                        , hashable                    >= 1.2   && < 1.3
                        , hedgehog                    >= 0.5   && < 0.6
                        , impure-containers           >= 0.4   && < 0.5
                        , judy                        >= 0.4   && < 0.5
                        , lens                        >= 4.15  && < 4.16
                        , loc                         >= 0.1   && < 0.2
                        , mtl                         >= 2.2   && < 2.3
                        , nondeterminism              >= 1.4   && < 1.5
                        , prettyprinter               >= 1.1   && < 1.2
                        , prettyprinter-ansi-terminal >= 1.1   && < 1.2
                        , primitive                   >= 0.6   && < 0.7
                        , QuickCheck                  >= 2.9   && < 2.10
                        , quickcheck-instances        >= 0.3   && < 0.4
                        , sbv                         >= 7.5   && < 7.7
                        , serialise                   >= 0.2   && < 0.3
                        , smallcheck                  >= 1.1   && < 1.2
                        , system-filepath             >= 0.4   && < 0.5
                        , tasty                       >= 0.11  && < 0.12
                        , tasty-hedgehog              >= 0.1   && < 0.2
                        , tasty-html                  >= 0.4   && < 0.5
                        , tasty-hunit                 >= 0.9   && < 0.10
                        , tasty-lens                  >= 0.3   && < 0.4
                        , tasty-quickcheck            >= 0.8   && < 0.9
                        , tasty-smallcheck            >= 0.8   && < 0.9
                        , template-haskell            >= 2.9   && < 2.12
                        , text                        >= 1.2   && < 1.3
                        , text-short                  >= 0.1   && < 0.2
                        , transformers                >= 0.4   && < 0.6
                        , unexceptionalio             >= 0.3   && < 0.4
                        , unordered-containers        >= 0.2   && < 0.3
                        , vector                      >= 0.12  && < 0.13
                        , vector-algorithms           >= 0.7   && < 0.8
    default-language:     Haskell2010
    -- FIXME: add other-extensions list
    -- if impl(ghc >= 8.0)
    --     ghc-options:      -Wcompat -Weverything
    --                       -fno-warn-unsafe
    --                       -fno-warn-safe
    --                       -fno-warn-implicit-prelude
    --                       -fno-warn-unused-do-bind
    --                       -fno-warn-missed-specialisations
    --                       -fno-warn-all-missed-specialisations
    --                       -g -threaded
    -- else
    --     ghc-options:      -Wall
    --                       -g -threaded

--------------------------------------------------------------------------------
